force-app/main/default/objects/Sales_info__c/Sales_info__c.object-meta.xml
<CustomObject>
    <label>Sales info</label>
    <nameField>
        <label>Sales info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>