force-app/main/default/objects/Sales_info__c/fields/Buyer__c.field-meta.xml
<CustomField>
    <fullName>Buyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buyer</label>
    <referenceTo>customer_information__c</referenceTo>
    <relationshipLabel>Sales infos</relationshipLabel>
    <relationshipName>Sales_infos</relationshipName>
    <type>Lookup</type>
</CustomField>