force-app/main/default/objects/Sales_info__c/fields/car_sold__c.field-meta.xml
<CustomField>
    <fullName>car_sold__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>car sold</label>
    <referenceTo>car_inventory__c</referenceTo>
    <relationshipLabel>Sales infos</relationshipLabel>
    <relationshipName>Sales_infos</relationshipName>
    <type>Lookup</type>
</CustomField>