force-app/main/default/objects/Sales_info__c/fields/Sale_price__c.field-meta.xml
<CustomField>
    <fullName>Sale_price__c</fullName>
    <label>Sale price</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>